--- a/nginx/magic-domain.config
+++ b/nginx/magic-domain.config
@@ -49,12 +49,13 @@ server {
 
   location / {   try_files $uri @rewrite; }
   location @rewrite {
-    if (!-f index.php) { rewrite ^ /index.php; }
+    if (-f index.php) { rewrite ^ /index.php; }
   }
 
   location ~ \.php$ {
     include fastcgi_params;
     fastcgi_pass $php_socket;
+    fastcgi_param  SCRIPT_FILENAME  /var/www/$project/$php_version$sub_dir/$fastcgi_script_name;
   }
 
   location /robots.txt { alias /var/www/nginx-default/robots.txt; }
